--- a/package.xml
+++ b/package.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
-		<members>GetProfileMetadataBatch</members>
+		<members>GetMetadataXmlBatch</members>
         <members>ListMetadataApi</members>
-		<members>Profile</members>
-		<members>ProfileMetadata</members>
+		<members>MetadataXmlBatchHelper</members>
         <members>ReadMetadataApi</members>
+        <members>S3Repository</members>
         <members>SOAPApi</members>
 		<name>ApexClass</name>
 	</types>
 	<types>
-		<members>Profile_Metadata__c.Encoded_FullName__c</members>
-		<members>Profile_Metadata__c.Is_Deleted__c</members>
-		<members>Profile_Metadata__c.Is_Too_Large_To_Process__c</members>
-		<members>Profile_Metadata__c.Last_Modified_Datetime__c</members>
-		<members>Profile_Metadata__c.Last_Saved_Datetime__c</members>
-		<members>Profile_Metadata__c.Profile_Id__c</members>
+		<members>Metadata_Item__c.Encoded_FullName__c</members>
+		<members>Metadata_Item__c.Is_Deleted__c</members>
+		<members>Metadata_Item__c.Is_Too_Large_To_Process__c</members>
+		<members>Metadata_Item__c.Last_Modified_Datetime__c</members>
+		<members>Metadata_Item__c.Last_Saved_Datetime__c</members>
+		<members>Metadata_Item__c.Profile_Id__c</members>
+        <members>Metadata_Item__c.Metadata_Type__c</members>
 		<name>CustomField</name>
 	</types>
 	<types>
-		<members>Profile_Metadata__c</members>
+		<members>Metadata_Item__c</members>
 		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Metadata_Types</members>
+		<name>GlobalValueSet</name>
 	</types>
 	<version>55.0</version>
 </Package>
